--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,8 @@
 DB_FILE_NAME=file:data/database.db
 BETTER_AUTH_SECRET=YourSuperSecretKeyHere
 BETTER_AUTH_URL=https://yourdomain.com
-
+CLOUDFLARE_API_TOKEN=your_cloudflare_api_token_here
+# DDNS_UPDATE_CRON_SCHEDULE=*/5 * * * * # Every 5 minutes is the default
 ## For GitHub OAuth
 # GITHUB_CLIENT_ID=your_github_client_id_here
 # GITHUB_CLIENT_SECRET=your_github_client_secret_here
