add ability to disable all signups

--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,7 @@
 DB_FILE_NAME=file:data/database.db
 BETTER_AUTH_SECRET=YourSuperSecretKeyHere
 BETTER_AUTH_URL=https://yourdomain.com
+BETTER_AUTH_DISABLE_SIGNUP=false
 CLOUDFLARE_API_TOKEN=your_cloudflare_api_token_here
 # DDNS_UPDATE_CRON_SCHEDULE=*/5 * * * * # Every 5 minutes is the default
 ## For GitHub OAuth
