--- a/.env.template
+++ b/.env.template
@@ -4,6 +4,7 @@ BETTER_AUTH_URL=https://yourdomain.com
 BETTER_AUTH_DISABLE_SIGNUP=false
 CLOUDFLARE_API_TOKEN=your_cloudflare_api_token_here
 # DDNS_UPDATE_CRON_SCHEDULE=*/5 * * * * # Every 5 minutes is the default
+### OAuth Configuration
 ## For GitHub OAuth
 # GITHUB_CLIENT_ID=your_github_client_id_here
 # GITHUB_CLIENT_SECRET=your_github_client_secret_here
@@ -12,3 +13,8 @@ CLOUDFLARE_API_TOKEN=your_cloudflare_api_token_here
 # GITLAB_CLIENT_SECRET=your_gitlab_client_secret_here
 # If you are using a self-hosted Gitlab instance, set the issuer URL below
 # GITLAB_ISSUER_URL=https://gitlab.selfhosted.com
+### Sentry Configuration
+# Allow uploading error tracking to sentry
+# This is 100% opt-in. If you don't want to use Sentry, just leave this commented out.
+# You can also set the SENTRY_DSN to your own sentry server if you have one.
+# SENTRY_DSN='https://c83f3f647d396892731c6d7ba428ae43@sentry.voidrot.com/13'
