--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nuxt/icon": "^2.2.1",
     "@nuxt/scripts": "^0.13.2",
     "@nuxt/test-utils": "^3.23.0",
+    "@sentry/nuxt": "^10.38.0",
     "@tailwindcss/vite": "^4.1.18",
     "@unhead/vue": "^2.1.2",
     "better-auth": "^1.4.18",
@@ -40,5 +41,8 @@
   "devDependencies": {
     "drizzle-kit": "^0.31.8",
     "tsx": "^4.21.0"
+  },
+  "overrides": {
+    "@vercel/nft": "^0.27.4"
   }
 }
